Changes page title.

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <!-- Set the base href -->
     <base href="/">
 
-    <title>Angular 2 Chromecast Receiver Starter Kit</title>
+    <title>8 nights</title>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=1600, initial-scale=1">
